@@ -148,8 +148,8 @@ public final class ShellEnvironmentReader {
 
   private static String prepareCallArgs(List<String> callArgs) {
     var preparedCallArgs = CommandLineUtil.toCommandLine(callArgs);
-    var firstArg = preparedCallArgs.remove(0);
-    preparedCallArgs.add(0, CommandLineUtil.escapeParameterOnWindows(firstArg, false));
+    var firstArg = preparedCallArgs.removeFirst();
+    preparedCallArgs.addFirst(CommandLineUtil.escapeParameterOnWindows(firstArg, false));
     // for `cmd.exe`, we need to add extra double quotes for the actual command in call
     // to mitigate possible JVM issue when argument contains spaces and the first word
     // starts with double quote and the last ends with double quote and JVM does not
@@ -211,8 +211,10 @@ public final class ShellEnvironmentReader {
   ) throws IOException {
     if (timeoutMillis <= 0) timeoutMillis = DEFAULT_TIMEOUT_MILLIS;
 
-    var dataFile = Files.createTempFile("ij-shell-env-data.", ".tmp");
-    var logFile = Files.createTempFile("ij-shell-env-log.", ".tmp");
+    var tmpDir = Files.createDirectories(Path.of(System.getProperty("java.io.tmpdir")));
+    var mark = ProcessHandle.current().pid() + "." + System.nanoTime();
+    var dataFile = tmpDir.resolve("ij-shell-env-data." + mark + ".tmp");
+    var logFile = tmpDir.resolve("ij-shell-env-log." + mark + ".tmp");
 
     try {
       var args = command.command();
@@ -236,8 +238,8 @@ public final class ShellEnvironmentReader {
         .start();
       int exitCode = waitAndTerminateAfter(process, timeoutMillis);
 
-      var envData = Files.readString(dataFile, Charset.defaultCharset());
-      var log = Files.exists(logFile) ? Files.readString(logFile, Charset.defaultCharset()) : "(no log file)";
+      var envData = Files.exists(dataFile) ? Files.readString(dataFile) : "";
+      var log = Files.exists(logFile) ? readLogFile(logFile) : "(no log file)";
       if (exitCode != 0 || envData.isEmpty()) {
         if (!log.isEmpty()) {
           LOG.info("stdout/stderr: " + log);
@@ -247,15 +249,26 @@ public final class ShellEnvironmentReader {
 
       var env = EnvironmentUtil.parseEnv(envData.split("\0"));
       env.remove(INTELLIJ_ENVIRONMENT_READER);
-      if ("zsh".equals(Path.of(command.command().get(0)).getFileName().toString())) {
+      if ("zsh".equals(Path.of(command.command().getFirst()).getFileName().toString())) {
         env.remove(DISABLE_OMZ_AUTO_UPDATE);
       }
-      LOG.info("shell environment loaded (" + command.command().get(0) + ", " + env.size() + " vars)");
+      LOG.info("shell environment loaded (" + command.command().getFirst() + ", " + env.size() + " vars)");
       return new Pair<>(env, log);
     }
     finally {
       deleteTempFile(logFile);
       deleteTempFile(dataFile);
+    }
+  }
+
+  @SuppressWarnings("ReadWriteStringCanBeUsed")
+  private static String readLogFile(Path path) {
+    try {
+      // `new String(...)` better survives malformed UTF-8 input that `Files.readString(...)`
+      return new String(Files.readAllBytes(path), Charset.defaultCharset());
+    }
+    catch (IOException e) {
+      return "(error: " + e.getClass().getName()+ ": " + e.getMessage() + ")";
     }
   }
 
